# RedditGroupManager

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  api_main.py  changelog.txt  docker-compose.yaml  logging_config.py  purge-history.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  run_migrations.py  serve_api.py  start_servers.sh  worker.py
migrations/: env.py
migrations/versions/: 09eab64cf78d_add_flair_id_column.py  26f661cf3cce_add_status_columns.py  2efa0e31c863_add_flair_text_column.py  4c19cde03134_add_comment_column.py  6cd196ddaaeb_create_post_check_jobs.py  8b1f8cf1d9ab_add_campaign_column.py  907ba355309c_add_post_type_column.py  c3a2c487311e_add_comment_id_column.py  (+1 more)
reddit_manager/: __init__.py  auth.py  commands.py
reddit_manager/utils/: db.py  (+5 more)
scripts/: install_node_deps.sh
templates/: base.html  home.html  status.html
tests/: conftest.py  test_admin_reload.py  test_api_group_posts.py  test_check_moderation_status.py  test_cleanup_temp_files.py  test_create_processing_post.py  test_dompurify.py  test_flair_selector.py  test_group_service.py  test_groups_api_auth.py  test_history_filter_scheduled.py  test_htmx_toasts.py  test_live_posts.py  test_parse_schedule_time.py  test_post_repost.py  test_post_undo.py  test_posts_history_status_display.py  test_preview_route.py  test_purge_history_script.py  test_reload_env.py  test_repost_posts.py  test_reschedule_and_delete.py  test_schedule_post.py  test_search_clear.py  test_startup_status.py  test_status_api_host.py  test_verify_token.py
(+50 files in other folders)
