[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-manager"
dynamic = ["version"]
description = "Simple Reddit management service"
readme = "README.md"
requires-python = ">=3.11"

authors = [ { name = "Reddit Manager" } ]

[tool.setuptools]
py-modules = ["logging_config"]

[tool.setuptools.packages.find]
include = ["reddit_manager*"]

[tool.setuptools.dynamic]
version = {file = "app-version"}
